[package]
name = "alamofire-kit"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Alamofire Kit"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/Alamofire-rs"
homepage = "https://github.com/bk-rs/Alamofire-rs"
documentation = "https://docs.rs/alamofire-kit"
keywords = []
categories = []
readme = "README.md"
rust-version = "1.58.0"

[dependencies]
semver = { version = "1", default-features = false }
